add rss functionality

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link href="https://scylla.neocities.org/feed.txt" rel="alternate" type="application/rss+xml" title="Ash's Inchorrent Rambling" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
